frontend-deployment.yaml
# Archivo: frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend-container
        image: usoprototipico/frontend:latest # <-- CORREGIDO
        imagePullPolicy: Always # <-- CORREGIDO
        ports:
        - containerPort: 80
