frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: frontend
spec:
  selector:
    app: frontend # Debe coincidir con la etiqueta de los Pods del frontend-deployment
  ports:
    - name: http
      protocol: TCP
      port: 80       # El servicio escuchará en el puerto 80 dentro del clúster
      targetPort: 80 # Redirige al puerto 80 del contenedor Nginx del frontend
  type: ClusterIP    # ClusterIP es suficiente, el Ingress lo expondrá
