kafka-k8s.yaml
# --- Kafka Service ---
apiVersion: v1
kind: Service
metadata:
  name: kafka
spec:
  ports:
    - name: client
      port: 9092
      targetPort: 9092
  selector:
    app: kafka
---
# --- Kafka StatefulSet ---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  serviceName: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - image: bitnami/kafka:latest
          name: kafka
          ports:
            - containerPort: 9092
